force-app/main/default/objects/MetaHelper__Field_Creation__e/MetaHelper__Field_Creation__e.object-meta.xml
<CustomObject>
    <label>Field Creation</label>
    <pluralLabel>Field Creations</pluralLabel>
</CustomObject>