force-app/main/default/objects/MetaHelper__Field_Creation__e/fields/MetaHelper__Complete__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>