force-app/main/default/objects/MetaHelper__Field_Creation__e/fields/MetaHelper__Response__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>