force-app/main/default/objects/MetaHelper__Field_Creation__e/fields/MetaHelper__Success__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>